<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.placedorder.PlacedOrderFragment">

        <TextView
            android:id="@+id/tv_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/your_order_has_been_placed"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_placed_order"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/intro1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_place_order"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_purchasing_our_product_n_please_come_again"
            android:textAlignment="center"
            android:textColor="@color/login_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_placed_order" />

        <TextView
            android:id="@+id/go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_add"
            android:layout_margin="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/back_to_home"
            android:maxLines="1"
            android:textColor="@color/hmm"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
