<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.search.SearchFragment">

        <LinearLayout
            android:id="@+id/llToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="@dimen/_4sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:src="@drawable/ic_back_black"
                android:visibility="visible"
                app:tint="@color/gray_600"
                tools:ignore="ContentDescription" />


            <com.tunanh.clicktofood_hilt.ui.custemview.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:search_view_hint="@string/what_would_you_like_to_eat" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <ScrollView
            android:id="@+id/svHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/rlHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHistoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_toStartOf="@id/tvRemoveAllHistory"

            android:text="@string/history_search"
            android:textColor="@color/gray_600"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRemoveAllHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvHistoryTitle"
            android:layout_alignBottom="@id/tvHistoryTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/remove_all"
            android:textColor="@color/gray_400"
             />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvHistoryTitle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_history" />

        </RelativeLayout>
        </ScrollView>


    </LinearLayout>


</layout>
